[package]
name = "axum-dsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4"}
mime = { version = "0.3"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = {version = "1.0", features = ["json", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
