[package]
name = "simple-axum-dsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4"}
bytes = "1.0"
clap = { version = "3.0.14", features = ["derive"] }
flate2 = "1.0"
mime = { version = "0.3"}
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = {version = "1.0", features = ["json", "macros"] }
serde_yaml = "0.8"
shellexpand = "3.1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
